<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/bar_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/filter_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/filter_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/numbers_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/bar_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginStart="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginBottom="@dimen/ten"
        android:layout_marginTop="@dimen/ten"
        >
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/numbers_section_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/number_text"
            android:layout_marginBottom="@dimen/ten"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/numbers_recycler_view"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/numbers_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_constraintTop_toBottomOf="@id/numbers_section_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ivr_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/numbers_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginStart="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginBottom="@dimen/ten"
        >
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/ivr_section_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/ivr"
            android:layout_marginBottom="@dimen/ten"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/ivr_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ivr_section_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/others_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivr_section"

        android:layout_marginStart="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginBottom="@dimen/ten"
        >
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/others_section_label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/others"
            android:layout_marginBottom="@dimen/ten"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginLeft="@dimen/ten"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/others_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/others_section_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
        </android.support.v7.widget.RecyclerView>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>